# FastQuantum

./: .gitignore  BENCHMARK_HISTORY.md  GnnmodelGat.py  GnnmodelHybrid.py  GnnmodelV2.py  LLM_AUTOREGRESSIVE_AND_DISTILLATION.md  PROJECT_SUMMARY.md  README.md  README_FINETUNE.md  benchmark_encoding.py  best_qaoa_gat_model.pt  compare_models.py  fine_tuner.py  finetuned_maxcut_model.pt  generate_dataset.py  generate_maxcut_dataset_ai.py  generate_v1_dataset.py  gradio_interface.py  mon_nouveau_modele.pt  pyproject.toml  readme.md  requirements.txt  test_accuracy.py  test_lib.py
Dataset/finetune/: maxcut_train.pt  (+2 more)
Generator(forGPU)/: README.md  check_gpu_availability.py  gen_quantum_mp.py  requirements.txt
TesterGaps/: test_gnn_with_qiskit.py
api/: qiskit_utils.py  requirements.txt  server.py
backend/: main.py
examples/: 01_quickstart.py  02_multi_problem.py  03_feature_exploration.py  04_solution_prediction.py  05_comparison_approaches.py  06_accuracy_verification.py
experiments/: benchmark_hybrid.py  benchmark_rag_system.py  compare_qiskit_versions.py  explore_graph_rag.py  generate_dataset.py  generate_physics_proxy.py  generate_v1_wrapper.py  test_pennylane_minimal.py
fastquantum/: __init__.py
frontend/: index.html  package-lock.json  package.json  script.js  style.css
prototype_v1/: README.md  classifier.py  dataset.py  encoder.py  explication_bitstring_comparaison.txt  model.py  problem_embedding.py  sweep.py  test_model.py  train.py  transformer.py
tests/: finetune_model.py
utils/: circuit_registry.py  graph_memory.py  merge_datasets.py
(+24 files in other folders)
